fix features spacing in property-card

--- a/src/app/shared/property-card/property-card.component.scss
+++ b/src/app/shared/property-card/property-card.component.scss
@@ -83,6 +83,14 @@ mat-card.property-card {
     }
   }
 
+  div.footer {
+    div.features {
+      > span + span {
+        margin-left: 8px;
+      }
+    }
+  }
+
   mat-progress-bar {
     margin-top: 6px;
   }
